--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -2,12 +2,12 @@
     <ion-navbar color="primary">
         <div class="flex">
         <img src="assets/icon/header_logo.png" class="header-icon">
-        <ion-title>Sustainable development goals</ion-title>
+        <p class="judul">Sustainable development goals</p>
       </div>
     </ion-navbar>
   </ion-header>
   <ion-content>
-  <div *ngFor="let item of arrList" class="item" [ngStyle]="{'background-color': item.color}">
+  <div *ngFor="let item of arrList" (click)="next(item)" class="item" [ngStyle]="{'background-color': item.color}">
     <p class="list-item">{{ item.id }} {{ item.title }} </p>
   </div>
   </ion-content>
