--- a/src/pages/detail/detail.html
+++ b/src/pages/detail/detail.html
@@ -18,5 +18,9 @@
 
 
 <ion-content>
-
+  <ion-tabs>
+    <ion-tab [root]="tab1Root"></ion-tab>
+    <ion-tab [root]="tab2Root"></ion-tab>
+    <ion-tab [root]="tab3Root"></ion-tab>
+  </ion-tabs>
 </ion-content>
