--- a/src/pages/detail/detail.html
+++ b/src/pages/detail/detail.html
@@ -19,8 +19,8 @@
 
 <ion-content>
   <ion-tabs>
-    <ion-tab [root]="tab1Root"></ion-tab>
-    <ion-tab [root]="tab2Root"></ion-tab>
-    <ion-tab [root]="tab3Root"></ion-tab>
+    <ion-tab [root]="tab1Root" tabTitle="Target">TARGETS</ion-tab>
+    <ion-tab [root]="tab2Root" tabTitle="Indicator">INDICATORS</ion-tab>
+    <ion-tab [root]="tab3Root" tabTitle="Fact & Figures">FACTS & FIGURES</ion-tab>
   </ion-tabs>
 </ion-content>
