--- a/src/pages/detail/detail.html
+++ b/src/pages/detail/detail.html
@@ -18,9 +18,9 @@
 
 
 <ion-content>
-  <ion-tabs>
-    <ion-tab [root]="tab1Root" tabTitle="Target">TARGETS</ion-tab>
-    <ion-tab [root]="tab2Root" tabTitle="Indicator">INDICATORS</ion-tab>
-    <ion-tab [root]="tab3Root" tabTitle="Fact & Figures">FACTS & FIGURES</ion-tab>
+  <ion-tabs #myTabs>
+    <ion-tab [root]="tab1Root" [rootParams]="navParams.get('data')" tabTitle="Target">TARGETS</ion-tab>
+    <ion-tab [root]="tab2Root" [rootParams]="navParams.get('data')" tabTitle="Indicator">INDICATORS</ion-tab>
+    <ion-tab [root]="tab3Root" [rootParams]="navParams.get('data')" tabTitle="Fact & Figures">FACTS & FIGURES</ion-tab>
   </ion-tabs>
 </ion-content>
