--- a/src/pages/fact/fact.html
+++ b/src/pages/fact/fact.html
@@ -1,5 +1,5 @@
 <ion-content>
-    <p class="desc" *ngFor="let item of list">
-        {{item.desc}}
-    </p>
+    <div class="desc" *ngFor="let item of list">
+        <p [innerHtml]="item.desc"></p>
+    </div>
 </ion-content>
