--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -1,5 +1,5 @@
-<ion-header [ngStyle]="{'background': '#2335d3'}">
-  <ion-navbar [ngStyle]="{'background': '#2335d3'}">
+<ion-header>
+  <ion-navbar>
         <div class="flex">
         <img src="assets/icon/header_logo.png" class="header-icon">
         <p class="judul">Sustainable development goals</p>
