--- a/src/pages/detail/detail.html
+++ b/src/pages/detail/detail.html
@@ -17,8 +17,9 @@
   </ion-navbar>
 </ion-header>
 
+<ion-content></ion-content>
 
-<ion-content>
+<ion-footer>
     <ion-segment [(ngModel)]="pilihan" color="primary">
         <ion-segment-button value="target">
           Target
@@ -30,4 +31,4 @@
             Metadata
         </ion-segment-button>
       </ion-segment>
-</ion-content>
+</ion-footer>
