--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -1,7 +1,8 @@
 <ion-header>
   <ion-navbar>
-        <div class="center">
+      <div class="center">
         <img src="assets/icon/header.png" class="header-icon">
+        <img src="assets/icon/refresh.png" (click)="presentLoadingDefault()" class="search-icon">
       </div>
     </ion-navbar>
   </ion-header>
