--- a/src/pages/detail/detail.html
+++ b/src/pages/detail/detail.html
@@ -20,9 +20,21 @@
 </ion-header>
 
 <ion-content>
-  <div *ngIf="pilihan=='target'" [innerHtml]="data1?.title" style="padding:8px"></div>
-  <div *ngIf="pilihan=='indikator'" [innerHtml]="data2?.title" style="padding:8px"></div>
-  <div *ngIf="pilihan=='metadata'" [innerHtml]="data3?.title" style="padding:8px"></div>
+  <div *ngIf="pilihan=='target'" style="padding:8px">
+    <div  *ngFor="let item of data1" (click)="targetClick(item)">
+      <div [innerHtml]="item.title"></div>
+    </div>
+  </div>
+  <div *ngIf="pilihan=='indikator'" style="padding:8px">
+    <div  *ngFor="let item of data2">
+      <div [innerHtml]="item.title"></div>
+    </div>
+  </div>
+  <div *ngIf="pilihan=='metadata'" style="padding:8px">
+    <div  *ngFor="let item of data3">
+      <div [innerHtml]="item.title"></div>
+    </div>
+  </div>
 </ion-content>
 
 <ion-footer>
