--- a/src/pages/detail/detail.html
+++ b/src/pages/detail/detail.html
@@ -25,8 +25,8 @@
       <div [innerHtml]="item.title"></div>
     </div>
   </div>
-  <div *ngIf="pilihan=='indikator'" style="padding:8px">
-    <div  *ngFor="let item of data2">
+  <div *ngIf="pilihan=='indikator'"  style="padding:8px">
+    <div  *ngFor="let item of data2" (click)="indicatorClick(item)">
       <div [innerHtml]="item.title"></div>
     </div>
   </div>
