--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -7,7 +7,7 @@
 <ion-header>
   <ion-navbar>
       <div class="flex">
-          <p class="judul">Pencarian</p>
+          <p class="judul">Pencarian - {{cariBy}}</p>
           <p class="judul"  (click)="goBack()">Cancel</p>
       </div>
       <ion-searchbar
